implement upload command work in progress